--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity android:name="com.project.onur.playerx.activity.SignUpActivity" />
         <activity
             android:name="com.project.onur.playerx.activity.MainActivity"
-            android:label="@string/title_activity_main"></activity>
+            android:label="@string/title_activity_main">
+
+        </activity>
     </application>
 
 </manifest>
