--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.github.delight-im:Android-SimpleLocation:v1.0.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.appyvet:materialrangebar:1.3'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
