--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity
             android:name="com.project.onur.playerx.activity.LoginActivity"
             android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden"
             android:exported="true">
 
 
@@ -51,7 +52,9 @@
         </activity>
 
 
-        <activity android:name="com.project.onur.playerx.activity.SignUpActivity" />
+        <activity android:name="com.project.onur.playerx.activity.SignUpActivity"
+            android:windowSoftInputMode="stateHidden"/>
+
         <activity
             android:name="com.project.onur.playerx.activity.MainActivity"
             android:label="@string/title_activity_main">
