--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
 
         <activity
             android:name="com.project.onur.playerx.activity.MainActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:label="@string/title_activity_main">
 
         </activity>
