--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.project.onur.playerx"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,8 +27,8 @@ dependencies {
     })
 
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:design:26.0.1'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'de.hdodenhof:circleimageview:2.1.0'
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.github.delight-im:Android-SimpleLocation:v1.0.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.google.firebase:firebase-storage:11.0.2'
+    compile 'com.wdullaer:materialdatetimepicker:3.3.0'
     compile 'com.appyvet:materialrangebar:1.3'
     testCompile 'junit:junit:4.12'
 }
