--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.0.2'
     compile 'com.wdullaer:materialdatetimepicker:3.3.0'
     compile 'com.appyvet:materialrangebar:1.3'
+    compile 'cn.pedant.sweetalert:library:1.3'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
