--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,19 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support:design:26.0.1'
     compile 'com.android.support:cardview-v7:26.0.1'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.google.android.gms:play-services-maps:11.4.2'
+    compile 'com.google.android.gms:play-services-auth:11.4.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.google.firebase:firebase-auth:11.0.2'
-    compile 'com.google.firebase:firebase-database:11.0.2'
+    compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'com.github.delight-im:Android-SimpleLocation:v1.0.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
-    compile 'com.google.firebase:firebase-storage:11.0.2'
+    compile 'com.google.firebase:firebase-storage:11.4.2'
     compile 'com.wdullaer:materialdatetimepicker:3.3.0'
     compile 'com.appyvet:materialrangebar:1.3'
     compile 'cn.pedant.sweetalert:library:1.3'
