--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.wdullaer:materialdatetimepicker:3.3.0'
     compile 'com.appyvet:materialrangebar:1.3'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
