--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:design:27.0.0'
     compile 'com.android.support:cardview-v7:27.0.0'
     compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
     compile 'com.google.android.gms:play-services-maps:11.4.2'
     compile 'com.google.android.gms:play-services-auth:11.4.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
@@ -48,6 +49,8 @@ dependencies {
     compile 'com.appyvet:materialrangebar:1.3'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
